feat: add support for comment API and comment as a field of post
