# doc/openapiv2/feed/v1/api.swagger.json
@@ -132,6 +132,30 @@
         }
       }
     },
+    "v1Comment": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "content": {
+          "type": "string"
+        },
+        "parentId": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "postId": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "userId": {
+          "type": "integer",
+          "format": "int32"
+        }
+      }
+    },
     "v1FeedResponse": {
       "type": "object",
       "properties": {
@@ -165,6 +189,12 @@
           "type": "array",
           "items": {
             "$ref": "#/definitions/v1Media"
+          }
+        },
+        "comments": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/v1Comment"
           }
         }
       }
